# Tubercool

./: .gitignore  README.md  client_pitch.md  doc_text.txt  render.yaml
backend/: .env.example  .gitignore  Dockerfile  init_db.py  init_db2.py  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  events.py  hospitals.py  patients.py  predictions.py  tests.py  users.py  webauthn.py
backend/app/core/: config.py  database.py
backend/app/ml/: cxr_model.py  predictor.py  train_cxr.py
backend/app/ml/models/: cxr_meta.json
backend/app/models/: models.py
backend/app/schemas/: clinical.py  user.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  loading.tsx
frontend/components/layout/: BottomNav.tsx  SettingsSidebar.tsx  Sidebar.tsx  TopBar.tsx
frontend/components/panels/: FilterPanel.tsx  HospitalPanel.tsx  PatientPanel.tsx  PredictionPanel.tsx  RunPredictionPanel.tsx  UserPanel.tsx
frontend/components/shared/: CloudflareScreen.tsx  EmptyState.tsx  PageHeader.tsx  SlidePanel.tsx  StatCard.tsx  StatusBadge.tsx
frontend/components/ui/: button.tsx
frontend/lib/: utils.ts
frontend/lib/api/: client.ts  index.ts
frontend/lib/hooks/: useHaptic.ts  useSSE.ts  useSwipeBack.ts
frontend/lib/store/: auth.ts
frontend/public/: Nonye-PhD.docx  brain.png~RF1415f927.TMP  manifest.json
frontend/types/: index.ts
(+32 files in other folders)
